--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@
 }
 
 .MuiTreeView-root {
-  @apply w-[32rem] border-[1px] border-border rounded p-1 !important;
+  @apply w-full 2xl:w-[32rem] border-[1px] border-border rounded p-1 !important;
 }
 
 .MuiTreeItem-content {
@@ -60,8 +60,12 @@
   @apply bg-interaction-primary-selected text-text-inverted hover:bg-interaction-primary hover:text-text-inverted !important;
 }
 
+.react-tags {
+  @apply w-full 2xl:w-[32rem] !important;
+}
+
 .react-tags__search-wrapper > .navds-text-field__input {
-  @apply w-[32rem] !important;
+  @apply w-full 2xl:w-[32rem] !important;
 }
 
 html,
