remove some more styled-components, general styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@
 }
 
 .MuiTreeView-root {
-  @apply w-full 2xl:w-[32rem] border-[1px] border-border rounded p-1 !important;
+  @apply w-full 2xl:w-[32rem] border border-border rounded p-1 !important;
 }
 
 .MuiTreeItem-content {
