--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,7 +49,7 @@
 }
 
 .MuiTreeView-root {
-  @apply w-full 2xl:w-[32rem] border border-border rounded p-1 !important;
+  @apply w-full border border-border rounded p-1 !important;
 }
 
 .MuiTreeItem-content {
@@ -61,11 +61,11 @@
 }
 
 .react-tags {
-  @apply w-full 2xl:w-[32rem] !important;
+  @apply w-full
 }
 
-.react-tags__search-wrapper > .navds-text-field__input {
-  @apply w-full 2xl:w-[32rem] !important;
+.react-tags__search-wrapper .navds-text-field__input {
+  @apply w-full !important
 }
 
 .nada-search-result > div {
