--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,30 @@
   @apply hover:underline selection:underline;
 }
 
+h1 {
+    @apply font-bold text-[2em]
+}
+
+h2 {
+    @apply font-bold text-[1.5em]
+}
+
+h3 {
+    @apply font-bold text-[1.17em]
+}
+
+h4 {
+    @apply font-bold text-[1em]
+}
+
+h5 {
+    @apply font-bold text-[0.83em]
+}
+
+h6 {
+    @apply font-bold text-[0.67rem]
+}
+
 .hidden-label > .navds-label {
   @apply hidden;
 }
