--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,6 +100,10 @@ h6 {
   @apply w-full !important
 }
 
+.nada-search-result {
+  @apply no-underline !important;
+}
+
 .nada-search-result > div {
   @apply text-text;
 }
