--- a/styles/globals.css
+++ b/styles/globals.css
@@ -43,19 +43,19 @@ h6 {
 }
 
 .select__control {
-  @apply border-border hover:border-focus min-h-[48px] !important;
+  @apply border-border-strong hover:border-border-focus min-h-[48px] !important;
 }
 
 .select__option {
-  @apply hover:bg-focus hover:text-text-inverted !important;
+  @apply hover:bg-border-focus hover:text-text-on-inverted !important;
 }
 
 .select__option--is-focused {
-  @apply bg-focus text-text-inverted !important;
+  @apply bg-border-focus text-text-on-inverted !important;
 }
 
 .select__control--is-focused {
-  @apply border-focus border-2 hover:border-focus !important;
+  @apply border-border-focus border-2 hover:border-border-focus !important;
 }
 
 .select__menu-list {
@@ -77,15 +77,15 @@ h6 {
 }
 
 .MuiTreeView-root {
-  @apply w-full border border-border rounded p-1 !important;
+  @apply w-full border border-border-strong rounded p-1 !important;
 }
 
 .MuiTreeItem-content {
-  @apply px-2 py-1 hover:bg-interaction-primary-hover-subtle hover:text-text !important;
+  @apply px-2 py-1 hover:bg-surface-action-subtle-hover hover:text-text-default !important;
 }
 
 .Mui-selected {
-  @apply bg-interaction-primary-selected text-text-inverted hover:bg-interaction-primary hover:text-text-inverted !important;
+  @apply bg-surface-action-selected text-text-on-inverted hover:bg-surface-action hover:text-text-on-inverted !important;
 }
 
 .react-tags {
@@ -101,7 +101,7 @@ h6 {
 }
 
 .nada-product-area-link:hover > div > div > div {
-  @apply text-link underline
+  @apply text-text-action underline
 }
 
 .nada-product-area-link:focus > div > div > div {
@@ -113,15 +113,15 @@ h6 {
 }
 
 .nada-product-area-link > div > p {
-  @apply text-text
+  @apply text-text-default
 }
 
 .nada-search-result {
-  @apply no-underline text-text !important
+  @apply no-underline text-text-default !important
 }
 
 .nada-search-result:hover > div > div > div > h2 {
-  @apply text-link underline
+  @apply text-text-action underline
 }
 
 .nada-search-result:focus > div > div > div {
