--- a/styles/globals.css
+++ b/styles/globals.css
@@ -159,7 +159,7 @@ h6 {
 }
 
 .panel-item > span {
-  @apply w-full flex justify-between
+  @apply w-full flex justify-between text-start
 }
 
 ol {
