--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,7 +129,7 @@ h6 {
 }
 
 .children-fullwidth > div {
-  @apply w-full
+  @apply flex justify-center w-[90vw] md:w-[70vw] self-center
 }
 
 .svg-scale:hover > svg {
