--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,6 +144,13 @@ h6 {
   background-size: contain;
 }
 
+.nada-slash--white {
+  background-image: url("/slash.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  filter: invert(99%) sepia(12%) saturate(421%) hue-rotate(231deg) brightness(119%) contrast(100%);
+}
+
 .expore-areas-icon {
   background-image: url("/explore-areas.svg");
   background-repeat: no-repeat;
